MOB_360_2017_1a_V6/objects/Selling_Day_Calendar__c.object
<CustomObject>
    <description>This object is used in Sales Volume dashboard calculation on M360 application.</description>
    <fields>
        <fullName>Date__c</fullName>
        <description>This field is used in Sales Volume dashboard calculation on M360 application.</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Selling_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used in Sales Volume dashboard calculation on M360 application.</description>
        <label>Selling_Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WSLR_NBR__c</fullName>
        <description>This field is used in Sales Volume dashboard calculation on M360 application.</description>
        <label>WSLR_NBR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSLR_PARTY_ID__c</fullName>
        <description>This field is used in Sales Volume dashboard calculation on M360 application.</description>
        <label>WSLR_PARTY_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Selling_Day_Calendar</label>
    <nameField>
        <label>Selling_Day_Calendar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Selling_Day_Calendar</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>